--- a/taskmgr/src/app/app.component.html
+++ b/taskmgr/src/app/app.component.html
@@ -1,10 +1,10 @@
 <md-sidenav-container [class.myapp-dark-theme]="darkTheme">
-  <md-sidenav #sidenav>
-    <app-sidebar></app-sidebar>
+  <md-sidenav #sidenav >
+    <app-sidebar (navClick)="sidenav.toggle()" ></app-sidebar>
   </md-sidenav>
   <div class="site">
     <header>
-      <app-header (toggle)="sidenav.open()" (toggleDarkTheme)="switchTheme($event)"></app-header>
+      <app-header (toggle)="sidenav.toggle()" (toggleDarkTheme)="switchTheme($event)"></app-header>
     </header>
     <main>
       <router-outlet></router-outlet>
