--- a/taskmgr/src/app/core/sidebar/sidebar.component.html
+++ b/taskmgr/src/app/core/sidebar/sidebar.component.html
@@ -1,11 +1,11 @@
 <md-nav-list>
   <h3 md-subheader>项目</h3>
-    <md-list-item>
-      <span md-line>项目首页</span>
+    <md-list-item [routerLink]="['/project']" (click)="onNavClick()">
+      <span md-line >项目首页</span>
       <span md-line md-subheader>查看你的所有项目</span>
     </md-list-item>
   <h3 md-subheader>日历</h3>
-  <md-list-item><span>月视图</span></md-list-item>
+  <md-list-item [routerLink]="['/tasklists']" (click)="onNavClick()"><span>月视图</span></md-list-item>
   <md-list-item><span>周视图</span></md-list-item>
   <md-list-item><span>日视图</span></md-list-item>
 </md-nav-list>
