--- a/taskmgr/src/app/project/project-list/project-list.component.html
+++ b/taskmgr/src/app/project/project-list/project-list.component.html
@@ -1,8 +1,11 @@
-<app-project-item *ngFor="let project of projects" [item]="project" class="card"
-                  (onInvite)="launchInviteDialog()"
-                  (onEdit)="launchUpdateDialog(project)" (onDel)="launchConfirmDialog()">
+<div [@listAnim]="projects.length" class="container">
+  <app-project-item *ngFor="let project of projects" [item]="project" class="card"
+                    (onInvite)="launchInviteDialog()"
+                    (onEdit)="launchUpdateDialog(project)" (onDel)="launchConfirmDialog(project)">
 
-</app-project-item>
+  </app-project-item>
+</div>
+
 <button type="button" md-fab (click)="openNewProjectDialog()" class="fab-button">
   <md-icon>add</md-icon>
 </button>
