--- a/taskmgr/src/app/task/task-home/task-home.component.html
+++ b/taskmgr/src/app/task/task-home/task-home.component.html
@@ -1,9 +1,19 @@
 <div class="task-lists">
-  <app-task-list class="list-container" *ngFor="let list of lists">
+  <app-task-list class="list-container"
+                 app-droppable
+                 [dragEnterClass]="'drag-enter'"
+                 [dropTags]="['task-item', 'task-list']"
+                 [app-draggable]="true"
+                 [draggedClass]="'drag-start'"
+                 [dragData]="lists"
+                 [dragTag]="'task-list'"
+                 (dropped)="handleMove($event, lists)"
+                 *ngFor="let list of lists"  >
     <app-task-header [header]="list.name" (newTask)="launchNewTaskDialog()"
                      (moveAll)="launchCopyTaskDialog()"
                      (delList)="launchConfirmDialog()"
                      (editList)="launchEditListDialog()"></app-task-header>
+    <app-quick-task (quickTask)="handleQuickTask($event)"></app-quick-task>
     <app-task-item *ngFor="let task of list.tasks" [item]="task"
                    (taskClick)="launchUpdateTaskDialog(task)" ></app-task-item>
   </app-task-list>
