--- a/taskmgr/src/app/task/task-item/task-item.component.html
+++ b/taskmgr/src/app/task/task-item/task-item.component.html
@@ -1,7 +1,12 @@
 <md-list-item class="container"
+              [@item]="widerPriority"
               [ngClass]="{'priority-normal': item.priority === 3,
                           'priority-important': item.priority === 2,
                           'priority-emergency': item.priority === 1}"
+                          [app-draggable]="true"
+                          [draggedClass]="'drag-start'"
+                          [dragData]="item"
+                          [dragTag]="'task-item'"
                           (click)="onItemClick()"
 >
   <md-checkbox [checked]="item.completed" class="completion-status" (click)="onCheckBoxClick($event)"></md-checkbox>
